increase build time